--- a/src/pages/Adm/Coordenacao/Usuarios/usuarios.module.css
+++ b/src/pages/Adm/Coordenacao/Usuarios/usuarios.module.css
@@ -3,6 +3,7 @@
   background-size: cover;
   min-height: 100vh;
   padding: 2rem;
+  padding-top: 155px;
   position: relative;
 }
 
@@ -40,6 +41,7 @@
   color: white;
   font-size: 2rem;
   font-weight: bold;
+  margin-top: 0;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
